--- a/openai/Dockerfile
+++ b/openai/Dockerfile
@@ -5,6 +5,7 @@ MAINTAINER remidi "yashwanthremidi@gmail.com"
 RUN apt-get update -y
 RUN apt-get upgrade -y
 RUN apt-get install -y python3-pip build-essential
+RUN apt-get install git 
 
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
