--- a/openai/requirements.txt
+++ b/openai/requirements.txt
@@ -82,12 +82,9 @@ Send2Trash==1.5.0
 six==1.12.0
 tb-nightly==1.14.0a20190301
 tensorboard==1.13.1
-tensorflow==2.0.0a0
-tensorflow-estimator==1.13.0
 termcolor==1.1.0
 terminado==0.8.2
 testpath==0.4.2
-tf-estimator-nightly==1.14.0.dev2019030115
 tornado==6.0.2
 traitlets==4.3.2
 typed-ast==1.3.1
@@ -97,3 +94,4 @@ webencodings==0.5.1
 Werkzeug==0.15.1
 widgetsnbextension==3.4.2
 wrapt==1.11.1
+tensorflow-gpu==2.0.0-alpha0
