--- a/openai/Dockerfile
+++ b/openai/Dockerfile
@@ -9,3 +9,5 @@ RUN apt-get install -y git
 
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
+
+ENTRYPOINT [ "python3" ]
