--- a/openai/Dockerfile
+++ b/openai/Dockerfile
@@ -10,4 +10,5 @@ RUN apt-get install -y git
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 
+WORKDIR /workdir
 ENTRYPOINT [ "python3" ]
