--- a/openai/Dockerfile
+++ b/openai/Dockerfile
@@ -11,4 +11,4 @@ COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 
 WORKDIR /workdir
-# ENTRYPOINT [ "python3" ]
+ENTRYPOINT [ "python3" ]
