--- a/openai/Dockerfile
+++ b/openai/Dockerfile
@@ -1,4 +1,4 @@
-FROM tensorflow/tensorflow:2.0.0a0-gpu-py3
+FROM tensorflow/tensorflow:2.0.0b0-gpu-py3
 
 MAINTAINER remidi "yashwanthremidi@gmail.com"
 
