--- a/openai/Dockerfile
+++ b/openai/Dockerfile
@@ -1,6 +1,6 @@
 FROM tensorflow/tensorflow:2.0.0b0-gpu-py3
 
-MAINTAINER remidi "yashwanthremidi@gmail.com"
+LABEL remidi "yashwanthremidi@gmail.com"
 
 RUN apt-get update -y && apt-get install -y git
 
