added jupyter extensions

--- a/tensorflow-lab/Dockerfile
+++ b/tensorflow-lab/Dockerfile
@@ -8,12 +8,25 @@ RUN pip3 install -r requirements.txt
 RUN apt-get install nodejs -y && apt-get install npm -y 
 
 COPY jupyter_notebook_config.py jupyter_notebook_config.py
-COPY jupyter_settings/.jupyter .jupyter
-WORKDIR /project
 
+RUN jupyter labextension install @jupyterlab/git && \
+    jupyter labextension install @jupyterlab/google-drive && \
+    jupyter labextension install @jupyterlab/vega4-extension && \
+    jupyter labextension install @jupyterlab/plotly-extension && \
+    jupyter labextension install @jupyterlab/geojson-extension && \
+    jupyter labextension install jupyterlab-drawio && \
+    jupyter labextension install @jupyterlab/latex && \
+    jupyter labextension install @jupyterlab/github && \
+    jupyter labextension install @oriolmirosa/jupyterlab_materialdarker && \
+    jupyter labextension install @telamonian/theme-darcula && \
+    jupyter labextension install @jupyterlab/jupyterlab-mp4
+
+
+WORKDIR /project
 EXPOSE 8888
 
-CMD [ "jupyter", "lab", "--no-browser", "--allow-root"]
+
+CMD [ "jupyter", "lab", "--config", "/jupyter_notebook_config.py", "--no-browser", "--allow-root"]
 
 
 
